httpd/httpd.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  annotations:
    cert-manager.io/cluster-issuer: my-ca-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: httpd.ubuntu
    http:
      paths:
      - backend:
          service:
            name: httpd
            port:
              number: 80
        path: /
        pathType: Exact
  tls:
  - hosts:
    - httpd.ubuntu
    secretName: httpd-cert
